<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7ABDD8"
    tools:context=".MateriChoiceActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/inter"
        android:text="@string/pilih_kategori_materi"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_my_self_materi"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/inter"
        android:text="@string/my_self"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:cornerRadius="21dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/btn_fruits_materi"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/inter"
        android:text="@string/fruits"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:cornerRadius="21dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_my_self_materi" />

    <Button
        android:id="@+id/btn_animals_materi"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/inter"
        android:text="@string/animals"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:cornerRadius="21dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_fruits_materi" />

</androidx.constraintlayout.widget.ConstraintLayout>